fix compare button position on mobile PDP

--- a/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
+++ b/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
@@ -63,6 +63,7 @@
 
         @include mobile {
             top: 1.4rem;
+            z-index: 99; // same index as mobile header
         }
     }
 }
